--- a/example/loading/gW.html
+++ b/example/loading/gW.html
@@ -3,10 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
-    <title>loading audioWave</title>
+    <title>loading.GW</title>
     <script src="../../src/lib.js"></script>
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../src/loading/audioWave.js"></script>
+    <script src="../../src/loading/gW.js"></script>
     <script>
         var btn = Keyframe.defineClass('btn', {
             'background-color': '#000000',
@@ -27,8 +27,7 @@
             'overflow': 'hidden'
         });
         Keyframe.defineClass('mask', {
-            'color': '#d12',
-            'mask-image': 'linear-gradient(45deg, rgba(0,0,0,1) 10%, rgba(0,0,0,0.7) 90%)'
+            'color': '#d12'
         });
     </script>
     <style>
@@ -36,14 +35,10 @@
             height: 100%;
         }
         #demo {
-            width: 6em;
-            height: 3em;
             position: absolute;
             left: 50%;
             top: 50%;
-            margin-left: -2em;
-            margin-top: -1.5em;
-            font-size: 22px;
+            font-size: 6em;
         }
     </style>
 </head>
@@ -53,9 +48,9 @@
 <button id="goon" class="btn">goon</button>
 <button id="stop" class="btn">stop</button>
 <button id="restart" class="btn">restart</button>
-<div id="demo" class="mask">AudioWave</div>
+<div id="demo" class="mask"></div>
 <script>
-    var demo = new loading.AudioWave(document.getElementById('demo'));
+    var demo = new loading.GW(document.getElementById('demo'));
     Keyframe.compile();
     document.getElementById('start').onclick = function () {
         demo.start();
