--- a/example/loading/spinDisc.html
+++ b/example/loading/spinDisc.html
@@ -3,10 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
-    <title>loading audioWave</title>
+    <title>loading.SpinDisc</title>
     <script src="../../src/lib.js"></script>
     <script src="../../lib/jquery.min.js"></script>
-    <script src="../../src/loading/audioWave.js"></script>
+    <script src="../../src/loading/spinDisc.js"></script>
     <script>
         var btn = Keyframe.defineClass('btn', {
             'background-color': '#000000',
@@ -36,13 +36,11 @@
             height: 100%;
         }
         #demo {
-            width: 6em;
+            width: 3em;
             height: 3em;
             position: absolute;
             left: 50%;
             top: 50%;
-            margin-left: -2em;
-            margin-top: -1.5em;
             font-size: 22px;
         }
     </style>
@@ -53,9 +51,9 @@
 <button id="goon" class="btn">goon</button>
 <button id="stop" class="btn">stop</button>
 <button id="restart" class="btn">restart</button>
-<div id="demo" class="mask">AudioWave</div>
+<div id="demo" class="mask">SpinDisc</div>
 <script>
-    var demo = new loading.AudioWave(document.getElementById('demo'));
+    var demo = new loading.SpinDisc(document.getElementById('demo'));
     Keyframe.compile();
     document.getElementById('start').onclick = function () {
         demo.start();
