--- a/example/attention/flash.html
+++ b/example/attention/flash.html
@@ -3,10 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
-    <title>{%domain%}</title>
-    <script src="{%depth%}src/lib.js"></script>
-    <script src="{%depth%}lib/jquery.min.js"></script>
-    <script src="{%src%}"></script>
+    <title>attention.Flash</title>
+    <script src="../../src/lib.js"></script>
+    <script src="../../lib/jquery.min.js"></script>
+    <script src="../../src/attention/flash.js"></script>
     <script>
         var btn = Keyframe.defineClass('btn', {
             'background-color': '#000000',
@@ -55,9 +55,9 @@
 <button id="goon" class="btn">goon</button>
 <button id="stop" class="btn">stop</button>
 <button id="restart" class="btn">restart</button>
-<div id="demo" class="mask">{%name%}</div>
+<div id="demo" class="mask">Flash</div>
 <script>
-    var demo = new {%domain%}(document.getElementById('demo'));
+    var demo = new attention.Flash(document.getElementById('demo'));
     Keyframe.compile();
     document.getElementById('start').onclick = function () {
         demo.start();
