--- a/example/loading/circleSquare.html
+++ b/example/loading/circleSquare.html
@@ -35,12 +35,16 @@
             height: 100%;
         }
         #demo {
+            width: 0;
+            height: 0;
+            line-height: 150px;
             position: absolute;
             left: 50%;
             top: 50%;
-            font-size: 22px;
-            width: 0;
-            height: 0;
+            margin-left: -2em;
+            margin-top: -1.5em;
+            font-size: 75px;
+            text-align: center;
         }
     </style>
 </head>
