--- a/example/loading/gW.html
+++ b/example/loading/gW.html
@@ -35,10 +35,14 @@
             height: 100%;
         }
         #demo {
+            line-height: 150px;
             position: absolute;
             left: 50%;
             top: 50%;
-            font-size: 6em;
+            margin-left: -2em;
+            margin-top: -1.5em;
+            font-size: 75px;
+            text-align: center;
         }
     </style>
 </head>
