--- a/example/loading/snake.html
+++ b/example/loading/snake.html
@@ -37,12 +37,14 @@
         #demo {
             width: 1.3em;
             height: 1.3em;
+            line-height: 150px;
             position: absolute;
             left: 50%;
             top: 50%;
             margin-left: -2em;
             margin-top: -1.5em;
-            font-size: 22px;
+            font-size: 75px;
+            text-align: center;
         }
     </style>
 </head>
