--- a/example/loading/spinDisc.html
+++ b/example/loading/spinDisc.html
@@ -36,12 +36,16 @@
             height: 100%;
         }
         #demo {
-            width: 3em;
-            height: 3em;
+            width: 300px;
+            height: 300px;
+            line-height: 300px;
             position: absolute;
             left: 50%;
             top: 50%;
-            font-size: 22px;
+            margin-left: -2em;
+            margin-top: -1.5em;
+            font-size: 75px;
+            text-align: center;
         }
     </style>
 </head>
