--- a/example/special/rollIn.html
+++ b/example/special/rollIn.html
@@ -36,14 +36,15 @@
             height: 100%;
         }
         #demo {
-            width: 6em;
-            height: 3em;
+            width: 300px;
+            height: 150px;
+            line-height: 150px;
             position: absolute;
             left: 50%;
             top: 50%;
             margin-left: -2em;
             margin-top: -1.5em;
-            font-size: 22px;
+            font-size: 75px;
         }
     </style>
 </head>
