--- a/example/env.html
+++ b/example/env.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>demo</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <script src="../src/lib.js"></script>
+    <script src="../dist/lib.min.js"></script>
     <style>
         html, body {
             height: 100%;
@@ -77,8 +77,7 @@
         }
         .highlight {
             outline: 1px solid #0088cc;
-            opacity: 1;
-            z-index: 10000;
+            opacity: 1!important;
         }
     </style>
 </head>
@@ -90,7 +89,13 @@
     <div id="frame2"></div>
     <div id="frame1"></div>
 </div>
-<div id="animation"></div>
+<div id="animation">
+    <em data-id="frame1">frame1</em><br/>
+    <em data-id="frame2">frame2</em><br/>
+    <em data-id="frame3">frame3</em><br/>
+    <em data-id="frame4">frame4</em><br/>
+    <em data-id="frame5">frame5</em><br/>
+</div>
 <script>
     var compiler = Compiler.instance();
     var compatible = Compatible.instance();
