--- a/example/env.html
+++ b/example/env.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>demo</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
     <script src="../dist/lib.min.js"></script>
     <style>
         html, body {
             height: 100%;
             margin: 0;
+            overflow: hidden;
         }
         #frame1 {
             width: 25px;
@@ -105,9 +107,10 @@
         document.getElementById('animation').innerHTML = '';
         group = Keyframe.group(JSON.parse(data));
         group.onEnd(function() {
-            console.log(arguments);
+            document.getElementById('animation').innerHTML += "finished!";
         });
         group.start();
+        //console.log(compiler);
     }
     compatible.on(Event.css, function (eventName, dom, key, css) {
         document.getElementById('animation').innerHTML += "<em data-id=" + dom.id + ">" +  dom.id + " (" + key + ":" + css + ")</em></br>";
@@ -119,6 +122,7 @@
         data = messageEvent.data;
         if (group) {
             group.clear();
+            compiler.clear();
             setTimeout(refresh, 100)
         }
         else {
