--- a/example/doc.html
+++ b/example/doc.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>学习文档</title>
+    <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
     <style>
         html, body {
             height: 100%;
@@ -31,9 +32,10 @@
 
         button {
             float: left;
-            width: 6%;
-            height: 6%;
-            margin-top: 180px;
+            width: 40px;
+            height: 220px;
+            margin-top: 70px;
+            margin-left: 5px;
             border-radius: 5px;
             font-size: 25px;
         }
@@ -43,7 +45,6 @@
             border: 1px solid rgb(39, 40, 34);
             height: 400px;
             border-radius: 5px;
-            overflow: hidden;
         }
         pre {
             margin-bottom: 20px;
@@ -52,7 +53,7 @@
 </head>
 <body>
 <div class="container">
-    <button>compile</button>
+    <button>c<br/>o<br/>m<br/>p<br/>i<br/>l<br/>e</button>
     <iframe id="env" src="env.html"></iframe>
 <pre id="jsonEditor">
 {
@@ -127,20 +128,17 @@
    }
 }
 </pre>
-
     <pre id="cssEditor"></pre>
 </div>
 
 <script src="../lib/require.js"></script>
-<script src="../src/lib.js"></script>
-<script src="../lib/jquery.min.js"></script>
+<script src="../dist/lib.min.js"></script>
 <script src="../lib/cssbeautify.js"></script>
 <script>
-
     var envWin = document.getElementById('env').contentWindow;
     require.config({paths: {ace: "../ace"}});
     require(["ace/ace"], function (ace) {
-        $("button").click(function () {
+        Util.on(document.getElementsByTagName('button')[0], 'click', function () {
             cssEditor.setValue("");
             var code = jsonEditor.getValue();
             envWin.postMessage(code, '*');
