--- a/example/xuandong-full.html
+++ b/example/xuandong-full.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>炫动-移动</title>
+    <title>炫动-pc</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
     <script src="../dist/lib.min.js"></script>
@@ -13,37 +13,37 @@
             overflow: hidden;
         }
         #container {
-            width: 230px;
-            height: 165px;
+            width: 690px;
+            height: 495px;
             position: relative;
-            margin: -85px auto 0;
+            margin: -250px auto 0;
             top: 50%;
         }
         #frame1 {
-            width: 25px;
+            width: 75px;
             position: absolute;
-            height: 60px;
-            left: 108px;
+            height: 180px;
+            left: 335px;
             top: 0px;
             opacity: 1;
             background: url(http://ecmb.bdimg.com/public03/2e897163616c44fddada5bad03fdcc62.png) no-repeat;
             background-size: 100% 100%;
         }
         #frame2 {
-            width: 150px;
+            width: 450px;
             position: absolute;
-            height: 150px;
-            left: 45px;
-            top: 15px;
+            height: 450px;
+            left: 155px;
+            top: 80px;
             opacity: 0;
             background: url(http://ecmb.bdimg.com/public03/9dead4c5f9d0f4207faba69eed020959.png) no-repeat;
             background-size: 100% 100%;
         }
         #frame3 {
-            width: 150px;
+            width: 450px;
             position: absolute;
-            height: 150px;
-            left: 80px;
+            height: 450px;
+            left: 230px;
             opacity: 0;
             top: 15px;
             background: url(http://ecmb.bdimg.com/public03/5f77e9c925ca8814cd779da3127ba576.png) no-repeat;
@@ -52,17 +52,17 @@
         #frame4 {
             position: absolute;
             opacity: 0;
-            width: 55px;
-            height: 75px;
-            left: 62px;
-            top: 89px;
+            width: 165px;
+            height: 225px;
+            left: 92px;
+            top: 235px;
             background: url(http://ecmb.bdimg.com/public03/de7e49534a28de35b65314e8285b1f64.png) no-repeat;
             background-size: 100% 100%;
         }
         #frame5 {
-            width: 180px;
+            width: 540px;
             position: absolute;
-            height: 140px;
+            height: 420px;
             left: 0px;
             top: 15px;
             opacity: 0;
@@ -86,11 +86,11 @@
                 "translateY": "0px"
             },
             "1.2": {
-                "translateY": "55px",
+                "translateY": "185px",
                 "opacity": 1
             },
             "1.8": {
-                "translateY": "55px",
+                "translateY": "185px",
                 "opacity" : 0
             }
         },
@@ -137,7 +137,7 @@
                 "rotateZ":"0deg"
             },
             "4.32": {
-                "translateX": "-60px",
+                "translateX": "-120px",
                 "opacity": 1,
                 "rotateZ":"360deg"
             }
