--- a/example/env.html
+++ b/example/env.html
@@ -3,15 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>demo</title>
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
-    <script src="../dist/lib.min.js"></script>
     <style>
-        html, body {
+        html,
+        body {
             height: 100%;
             margin: 0;
             overflow: hidden;
         }
+
         #frame1 {
             width: 25px;
             position: absolute;
@@ -19,9 +20,10 @@
             left: 168px;
             top: 55px;
             opacity: 1;
-            background: url(http://ecmb.bdimg.com/public03/2e897163616c44fddada5bad03fdcc62.png) no-repeat;
+            background-image: url(http://ecmb.bdimg.com/public03/2e897163616c44fddada5bad03fdcc62.png);
             background-size: 100% 100%;
         }
+
         #frame2 {
             width: 150px;
             position: absolute;
@@ -29,9 +31,10 @@
             left: 105px;
             top: 70px;
             opacity: 0;
-            background: url(http://ecmb.bdimg.com/public03/9dead4c5f9d0f4207faba69eed020959.png) no-repeat;
+            background-image: url(http://ecmb.bdimg.com/public03/9dead4c5f9d0f4207faba69eed020959.png);
             background-size: 100% 100%;
         }
+
         #frame3 {
             width: 150px;
             position: absolute;
@@ -39,9 +42,10 @@
             left: 140px;
             opacity: 0;
             top: 70px;
-            background: url(http://ecmb.bdimg.com/public03/5f77e9c925ca8814cd779da3127ba576.png) no-repeat;
+            background-image: url(http://ecmb.bdimg.com/public03/5f77e9c925ca8814cd779da3127ba576.png);
             background-size: 100% 100%;
         }
+
         #frame4 {
             position: absolute;
             opacity: 0;
@@ -49,9 +53,10 @@
             height: 75px;
             left: 122px;
             top: 144px;
-            background: url(http://ecmb.bdimg.com/public03/de7e49534a28de35b65314e8285b1f64.png) no-repeat;
+            background-image: url(http://ecmb.bdimg.com/public03/de7e49534a28de35b65314e8285b1f64.png);
             background-size: 100% 100%;
         }
+
         #frame5 {
             width: 180px;
             position: absolute;
@@ -59,9 +64,10 @@
             left: 60px;
             top: 70px;
             opacity: 0;
-            background: url(http://ecmb.bdimg.com/public03/98e241f90a5302ad09c93c06f0a51d99.png) no-repeat;
+            background-image: url(http://ecmb.bdimg.com/public03/98e241f90a5302ad09c93c06f0a51d99.png);
             background-size: 100% 100%;
         }
+
         #animation {
             font-size: 16px;
             font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
@@ -71,17 +77,22 @@
             line-height: 2em;
             height: 90%;
         }
+
         em {
             cursor: pointer;
         }
+
         em:hover {
             background-color: #0088cc;
         }
+
         .highlight {
             outline: 1px solid #0088cc;
-            opacity: 1!important;
+            opacity: 1 !important;
         }
     </style>
+    <script src="../lib/require.js"></script>
+    <script src="../dist/amd/lib.js"></script>
 </head>
 <body>
 <div id="container">
@@ -99,48 +110,51 @@
     <em data-id="frame5">frame5</em><br/>
 </div>
 <script>
-    var compiler = Compiler.instance();
-    var compatible = Compatible.instance();
-    var group;
-    var data;
-    function refresh() {
-        document.getElementById('animation').innerHTML = '';
-        group = Keyframe.group(JSON.parse(data));
-        group.onEnd(function() {
-            document.getElementById('animation').innerHTML += "finished!";
+    require.config({baseUrl: "../dist/amd"});
+    require(["Event", "Compiler", "Compatible", "Keyframe", "Util"], function (Event, Compiler, Compatible, Keyframe, Util) {
+        var compiler = Compiler.instance();
+        var compatible = Compatible.instance();
+        var group;
+        var data;
+        function refresh() {
+            document.getElementById('animation').innerHTML = '';
+            group = Keyframe.group(JSON.parse(data));
+            group.onEnd(function () {
+                document.getElementById('animation').innerHTML += "finished!";
+            });
+            group.start();
+            //console.log(compiler);
+        }
+        compatible.on(Event.css, function (eventName, dom, key, css) {
+            document.getElementById('animation').innerHTML += "<em data-id=" + dom.id + ">" + dom.id + " (" + key + ":" + css + ")</em></br>";
         });
-        group.start();
-        //console.log(compiler);
-    }
-    compatible.on(Event.css, function (eventName, dom, key, css) {
-        document.getElementById('animation').innerHTML += "<em data-id=" + dom.id + ">" +  dom.id + " (" + key + ":" + css + ")</em></br>";
+        compiler.on(Event.style, function (eventName, id, cssText) {
+            window.parent.postMessage(cssText, '*');
+        });
+        Util.on(window, 'message', function (messageEvent) {
+            data = messageEvent.data;
+            if (group) {
+                group.clear();
+                compiler.clear();
+                setTimeout(refresh, 100)
+            }
+            else {
+                refresh();
+            }
+        });
+        Util.on(document.getElementById('animation'), 'mouseover', function (evt) {
+            var target = evt.target;
+            if (target.getAttribute('data-id')) {
+                Util.addClass(document.getElementById(target.getAttribute('data-id')), 'highlight');
+            }
+        });
+        Util.on(document.getElementById('animation'), 'mouseout', function (evt) {
+            var target = evt.target;
+            if (target.getAttribute('data-id')) {
+                Util.removeClass(document.getElementById(target.getAttribute('data-id')), 'highlight');
+            }
+        })
     });
-    compiler.on(Event.style, function (eventName, id, cssText) {
-        window.parent.postMessage(cssText, '*');
-    });
-    Util.on(window, 'message', function(messageEvent) {
-        data = messageEvent.data;
-        if (group) {
-            group.clear();
-            compiler.clear();
-            setTimeout(refresh, 100)
-        }
-        else {
-            refresh();
-        }
-    });
-    Util.on(document.getElementById('animation'), 'mouseover', function(evt) {
-        var  target = evt.target;
-        if (target.getAttribute('data-id')) {
-            Util.addClass(document.getElementById(target.getAttribute('data-id')), 'highlight');
-        }
-    });
-    Util.on(document.getElementById('animation'), 'mouseout', function(evt) {
-        var  target = evt.target;
-        if (target.getAttribute('data-id')) {
-            Util.removeClass(document.getElementById(target.getAttribute('data-id')), 'highlight');
-        }
-    })
 </script>
 </body>
 </html>
