--- a/example/env.html
+++ b/example/env.html
@@ -110,8 +110,9 @@
     <em data-id="frame5">frame5</em><br/>
 </div>
 <script>
-    require.config({baseUrl: "../dist/amd"});
-    require(["Event", "Compiler", "Compatible", "Keyframe", "Util"], function (Event, Compiler, Compatible, Keyframe, Util) {
+    console.log('env');
+    require.config({baseUrl: '../dist/amd'});
+    require(['Event', 'Compiler', 'Compatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
         var compiler = Compiler.instance();
         var compatible = Compatible.instance();
         var group;
@@ -120,13 +121,13 @@
             document.getElementById('animation').innerHTML = '';
             group = Keyframe.group(JSON.parse(data));
             group.onEnd(function () {
-                document.getElementById('animation').innerHTML += "finished!";
+                document.getElementById('animation').innerHTML += 'finished!';
             });
             group.start();
             //console.log(compiler);
         }
         compatible.on(Event.css, function (eventName, dom, key, css) {
-            document.getElementById('animation').innerHTML += "<em data-id=" + dom.id + ">" + dom.id + " (" + key + ":" + css + ")</em></br>";
+            document.getElementById('animation').innerHTML += '<em data-id=' + dom.id + '>' + dom.id + ' (' + key + ':' + css + ')</em></br>';
         });
         compiler.on(Event.style, function (eventName, id, cssText) {
             window.parent.postMessage(cssText, '*');
