--- a/example/xuandong-require.html
+++ b/example/xuandong-require.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
     <script src="../lib/require.js"></script>
+    <script src="../dist/amd/lib.js"></script>
     <style>
         html, body {
             height: 100%;
